# nrf-802154

./: .gitmodules  COPILOT_NOTES.md  Cargo.toml  README.md  ci.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: check.yml  ci.yml  publish-crate-dry-run.yml  publish-crate.yml
examples/: Cargo.toml
nrf-802154/: Cargo.toml  README.md
nrf-802154-sys/: Cargo.toml  README.md  build.rs
nrf-802154-sys/include/: errno.h  nrfx_config.h  string.h
nrf-802154-sys/src/: lib.rs
nrf-802154/src/: lib.rs  openthread.rs  platform.rs  radio.rs
nrf52840-examples/: Cargo.toml
nrf52840-examples/.cargo/: config.toml
nrf52840-examples/src/: lib.rs
nrf802154-examples/: Cargo.toml  build.rs
nrf802154-examples/src/: lib.rs
nrf802154-openthread-examples/: Cargo.toml
