[workspace]
resolver = "2"
members = [
    "nrf-802154-sys",
    "nrf-802154",
    "nrf802154-examples",
    "nrf802154-openthread-examples",
]

[profile.dev]
opt-level = 1               # Use slightly better optimizations.

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[patch.crates-io]
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "43df6b8b0affeacd9cb4094a3ab4f81576554887" }
openthread = { git = "https://github.com/sysgrok/openthread", branch = "for-review" }
#embassy-executor = { path = "../embassy/embassy-executor" }
#embassy-nrf = {path = "../embassy/embassy-nrf"}
#embassy-sync = {path = "../embassy/embassy-sync"}
#embassy-futures = {path = "../embassy/embassy-futures"}
#embassy-time = {path = "../embassy/embassy-time"}
#embassy-time-driver = {path = "../embassy/embassy-time-driver"}
#embassy-embedded-hal = {path = "../embassy/embassy-embedded-hal"}
#bt-hci = { path = "../bt-hci" }
