[workspace]
resolver = "2"
members = [
    "nrf-802154-sys",
    "nrf-802154",
    "examples",
]

[profile.dev]
opt-level = 1               # Use slightly better optimizations.

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[patch.crates-io]
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "08620f00fa54e1423c4d54d2da073fb819602d27" }
