[workspace]
resolver = "2"
members = [
    "nrf-802154-sys",
    "nrf-802154",
    "examples",
]

[profile.dev]
opt-level = 1               # Use slightly better optimizations.

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[patch.crates-io]
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "f54b6389ffa2750d4d3a4f5435660cb66b47e51a" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "f54b6389ffa2750d4d3a4f5435660cb66b47e51a" }
openthread = { git = "https://github.com/esp-rs/openthread" }
openthread-sys = { git = "https://github.com/esp-rs/openthread" }
trouble-host = { git = "https://github.com/alexmoon/trouble", branch = "no-controller-generic" }
