[package]
name = "nrf802154-examples"
version = "0.1.0"
edition = "2021"
description = "IEEE 802.15.4 examples for the nRF52840"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "receive_frame"
path = "src/bin/receive_frame.rs"

[[bin]]
name = "receive_all_frames"
path = "src/bin/receive_all_frames.rs"

[[bin]]
name = "send_frame"
path = "src/bin/send_frame.rs"

[[bin]]
name = "send_broadcast_frame"
path = "src/bin/send_broadcast_frame.rs"

[[bin]]
name = "sniffer"
path = "src/bin/sniffer.rs"

[dependencies]
nrf-802154 = { path = "../nrf-802154", features = ["nrf52840", "defmt"] }
nrf-mpsl = { version = "0.3.0", features = ["nrf52840", "critical-section-impl"] }

embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.9", features = ["nrf52840", "time-driver-rtc1", "unstable-pac"] }
embassy-time = "0.5"

defmt = "1"
defmt-rtt = "1"

cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2"
