[package]
name = "nrf802154-openthread-examples"
version = "0.1.0"
edition = "2021"
description = "OpenThread examples for the nRF52840"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "basic_udp"
path = "src/bin/basic_udp.rs"
harness = false

[[bin]]
name = "basic_enet"
path = "src/bin/basic_enet.rs"
harness = false

[[bin]]
name = "srp"
path = "src/bin/srp.rs"
harness = false

[dependencies]
openthread = { version = "0.1.0", features = ["udp", "srp", "embassy-net-driver-channel", "embassy-nrf", "defmt"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["strstr", "strcmp", "isupper", "utoa", "strtoul"] }

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-nrf = { version = "0.9", features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-futures = "0.1"
embassy-time = { version = "0.5", features = ["defmt"] }
embassy-net = { version = "0.7", features = ["defmt", "proto-ipv6", "medium-ip", "udp"] }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

static_cell = "2"
heapless = "0.8"
rand_core = "0.9"
critical-section = "1.1"
